objects/vlocity_ins__UserCalendar__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OperatingHoursId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Operating Hours</label>
        <referenceTo>vlocity_ins__OperatingHours__c</referenceTo>
        <relationshipLabel>User Calendars</relationshipLabel>
        <relationshipName>UserCalendars</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserCalendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Calendar</label>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>User Calendar</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>